// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BarChart renders properly 1`] = `
<mapProps(mapProps(Component))
  className="bar-chart-pf"
  color={
    Object {
      "pattern": Array [
        "#0088ce",
        "#39a5dc",
        "#3f9c35",
        "#ec7a08",
        "#cc0000",
      ],
    }
  }
  data={
    Object {
      "columns": Array [
        Array [
          "data",
          42,
        ],
      ],
    }
  }
  grid={
    Object {
      "y": Object {
        "show": true,
      },
    }
  }
  id="area-1"
  legend={
    Object {
      "show": false,
    }
  }
  tooltip={
    Object {
      "contents": [Function],
    }
  }
  type="bar"
/>
`;

exports[`GroupedBarChart renders properly 1`] = `
<mapProps(Component)
  className="bar-chart-pf"
  color={
    Object {
      "pattern": Array [
        "#0088ce",
        "#39a5dc",
        "#3f9c35",
        "#ec7a08",
        "#cc0000",
      ],
    }
  }
  data={
    Object {
      "columns": Array [
        Array [
          "data",
          42,
        ],
      ],
    }
  }
  grid={
    Object {
      "y": Object {
        "show": true,
      },
    }
  }
  id="area-2"
  legend={
    Object {
      "position": "bottom",
      "show": true,
    }
  }
  type="bar"
/>
`;

exports[`StackedBarChart renders properly 1`] = `
<mapProps(Component)
  className="bar-chart-pf"
  color={
    Object {
      "pattern": Array [
        "#0088ce",
        "#39a5dc",
        "#3f9c35",
        "#ec7a08",
        "#cc0000",
      ],
    }
  }
  data={
    Object {
      "columns": Array [
        Array [
          "data",
          42,
        ],
      ],
    }
  }
  grid={
    Object {
      "y": Object {
        "show": true,
      },
    }
  }
  id="area-3"
  legend={
    Object {
      "position": "bottom",
      "show": true,
    }
  }
  type="bar"
/>
`;
